--- a/nginx.conf
+++ b/nginx.conf
@@ -37,38 +37,11 @@ rtmp {
             record_unique on;
 
             # publish only from localhost
-            allow publish 127.0.0.1;
-            deny publish all;
+            #allow publish 127.0.0.1;
+            #deny publish all;
 
             #allow play all;
         }
-
-       
-
-
-        # HLS
-
-        # For HLS to work please create a directory in tmpfs (/tmp/hls here)
-        # for the fragments. The directory contents is served via HTTP (see
-        # http{} section in config)
-        #
-        # Incoming stream must be in H264/AAC. For iPhones use baseline H264
-        # profile (see ffmpeg example).
-        # This example creates RTMP stream from movie ready for HLS:
-        #
-        # ffmpeg -loglevel verbose -re -i movie.avi  -vcodec libx264
-        #    -vprofile baseline -acodec libmp3lame -ar 44100 -ac 1
-        #    -f flv rtmp://localhost:1935/hls/movie
-        #
-        # If you need to transcode live stream use 'exec' feature.
-        #
-        application hls {
-            live on;
-            hls on;
-            hls_path /mnt/hls;
-        }
-
-        
     }
 }
 
